[package]
name = "lexing-luthor"
version = "0.1.0"
authors = ["Spencer Gouw <swyverng55@g.ucla.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.4.2"
phf = { version = "0.10.0", features = ["macros"] }